==> ece-mohammad/STM32F103xxUART/Modules/serial/uart/ll/uart_ll.c <==
#include <stddef.h>
#include <stdint.h>
#include <string.h>
#include "utils/utils.h"
#include "buffer/ring_buffer.h"
#include "uart_ll_conf.h"
#include "serial/uart/uart.h"

UART_Error_t UART_enInitialize(const UART_Channel_t enChannel, UART_Conf_t const * const psConf)
{
    LL_GPIO_InitTypeDef Local_sGpioConf = {0};
    UART_t * Local_psUart = NULL;
    RingBuffer_Error_t Local_enBufferError;

#ifdef DEBUG

    if(IS_NULLPTR(psConf))
    {
        return UART_ERROR_NULLPTR;
    }

    if((enChannel >= UART_CHANNEL_COUNT) || IS_NULLPTR((Local_psUart = (UART_t *)UART_asHandles[enChannel])))
    {
        return UART_ERROR_INVALID_CHANNEL;
    }

#else

    Local_psUart = UART_asHandles[enChannel];

#endif /*  DEBUG  */

    /*  initialize channel's UART_t structure & enable its NVIC interrupt   */
#if defined(UART_ENABLE_CHANNEL_1)
    if(enChannel == UART_CHANNEL_1)
    {
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_GPIOA);
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_USART1);
    }
#endif  /*  UART_ENABLE_CHANNEL_1   */

#if defined(UART_ENABLE_CHANNEL_2)
    if(enChannel == UART_CHANNEL_2)
    {
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_GPIOA);
        LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_USART2);
    }
#endif  /*  UART_ENABLE_CHANNEL_2   */

#if defined(UART_ENABLE_CHANNEL_3)
    if(enChannel == UART_CHANNEL_3)
    {
        LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_GPIOB);
        LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_USART3);
    }
#endif  /*  UART_ENABLE_CHANNEL_3   */

    /*  initialize UART GPIO pins and RX/TX buffers  */
    if(Local_psUart->rx_size)
    {
        Local_enBufferError = RingBuffer_enInit(Local_psUart->rx_buffer, Local_psUart->rx, Local_psUart->rx_size);
        assert_param(Local_enBufferError == RING_BUFFER_ERROR_NONE);

        Local_sGpioConf.Pin = Local_psUart->rx_pin;
        Local_sGpioConf.Mode = LL_GPIO_MODE_INPUT;
        Local_sGpioConf.Speed = LL_GPIO_SPEED_FREQ_HIGH;
        LL_GPIO_Init(Local_psUart->gpio_port, &Local_sGpioConf);
    }

    if(Local_psUart->tx_size)
    {
        Local_enBufferError = RingBuffer_enInit(Local_psUart->tx_buffer, Local_psUart->tx, Local_psUart->tx_size);
        assert_param(Local_enBufferError == RING_BUFFER_ERROR_NONE);

        Local_sGpioConf.Pin = Local_psUart->tx_pin;
        Local_sGpioConf.Mode = LL_GPIO_MODE_ALTERNATE;
        Local_sGpioConf.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
        Local_sGpioConf.Speed = LL_GPIO_SPEED_FREQ_HIGH;
        LL_GPIO_Init(Local_psUart->gpio_port, &Local_sGpioConf);
    }

    /*  Initialize UART channel  */
    if(!LL_USART_Init(Local_psUart->uart_handle, (LL_USART_InitTypeDef *)psConf) == SUCCESS)
    {
        LL_USART_DeInit(Local_psUart->uart_handle);
        return UART_ERROR_NOT_INIT;
    }

    LL_USART_ConfigAsyncMode(Local_psUart->uart_handle);
    LL_USART_Enable(Local_psUart->uart_handle);

#if !defined(UART_MINIMAL_INTERRUPTS)

    /*  enable UART RX/Error interrupts if RX mode is enabled  */
    if((psConf->TransferDirection & LL_USART_DIRECTION_RX) == LL_USART_DIRECTION_RX)
    {
        LL_USART_EnableIT_RXNE(Local_psUart->uart_handle);
        LL_USART_EnableIT_PE(Local_psUart->uart_handle);
        LL_USART_EnableIT_ERROR(Local_psUart->uart_handle);
    }

    NVIC_SetPriority(Local_psUart->uart_irq, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), UART_INTERRUPT_PREEMPTION_PRIORITY, UART_INTERRUPT_GROUPING_PRIORITY));
    NVIC_EnableIRQ(Local_psUart->uart_irq);

#endif /* !defined(UART_MINIMAL_INTERRUPTS) */

    return UART_ERROR_NONE;
}

UART_Error_t UART_enDeInitialize(const UART_Channel_t enChannel)
{
    UART_t * Local_psUart = NULL;

#ifdef DEBUG

    if((enChannel >= UART_CHANNEL_COUNT) || IS_NULLPTR((Local_psUart = (UART_t *)UART_asHandles[enChannel])))
    {
        return UART_ERROR_INVALID_CHANNEL;
    }

#else

    Local_psUart = UART_asHandles[enChannel];

#endif /*  DEBUG  */

    NVIC_DisableIRQ(Local_psUart->uart_irq);

    /*  disable UART RX interrupts  */
    if((LL_USART_GetTransferDirection(Local_psUart->uart_handle) & LL_USART_DIRECTION_RX) == LL_USART_DIRECTION_RX)
    {
        LL_USART_DisableIT_RXNE(Local_psUart->uart_handle);
        LL_USART_DisableIT_PE(Local_psUart->uart_handle);
        LL_USART_DisableIT_ERROR(Local_psUart->uart_handle);
    }

    /*  reset RX/TX buffers */
    if(Local_psUart->tx_size)
    {
        RingBuffer_enReset(Local_psUart->tx_buffer);
    }

    if(Local_psUart->rx_size)
    {
        RingBuffer_enReset(Local_psUart->rx_buffer);
    }

    /*  de-initialize UART */
    if(LL_USART_DeInit(Local_psUart->uart_handle) != SUCCESS)
    {
        return UART_ERROR_NOT_INIT;
    }

    return UART_ERROR_NONE;
}

UART_Error_t UART_enWrite(const UART_Channel_t enChannel, uint8_t const * const pu8Data, uint32_t u32Len, uint32_t * const pu32Count)
{
    RingBuffer_Counter_t Local_u32Count = 0;
    UART_t * Local_psUart = NULL;
    RingBuffer_Error_t Local_enBufferError;

#ifdef DEBUG

    if((enChannel >= UART_CHANNEL_COUNT) || IS_NULLPTR(Local_psUart = (UART_t*)UART_asHandles[enChannel]))
    {
        return UART_ERROR_INVALID_CHANNEL;
    }

    if(IS_NULLPTR(pu8Data) || IS_NULLPTR(pu32Count))
    {
        return UART_ERROR_NULLPTR;
    }

    if(IS_ZERO(u32Len))
    {
        return UART_ERROR_INVALID_PARAM;
    }

#else

    Local_psUart = UART_asHandles[enChannel];

#endif /*  DEBUG  */

    /*  put bytes into tx queue  */
    Local_enBufferError = RingBuffer_enPutItems(Local_psUart->tx_buffer, pu8Data, u32Len, &Local_u32Count);

    (*pu32Count) = Local_u32Count;

    if(Local_enBufferError == RING_BUFFER_ERROR_NULLPTR)
    {
        return UART_ERROR_NOT_INIT;
    }
    else if(Local_enBufferError == RING_BUFFER_ERROR_FULL)
    {
        return UART_ERROR_BUFFER_FULL;
    }

    if(!LL_USART_IsEnabledIT_TXE(Local_psUart->uart_handle))
    {
        LL_USART_EnableIT_TXE(Local_psUart->uart_handle);
    }

    return UART_ERROR_NONE;
}

UART_Error_t UART_enWriteBlocking(const UART_Channel_t enChannel, uint8_t const * const pu8Data, uint32_t u32Len)
{
    UART_t * Local_psUart = NULL;
    uint8_t * Local_pu8DataPtr = (uint8_t *)pu8Data;

#ifdef DEBUG

    if((enChannel >= UART_CHANNEL_COUNT) || IS_NULLPTR(Local_psUart = (UART_t*)UART_asHandles[enChannel]))
    {
        return UART_ERROR_INVALID_CHANNEL;
    }

    if(IS_NULLPTR(pu8Data))
    {
        return UART_ERROR_NULLPTR;
    }

    if(IS_ZERO(u32Len))
    {
        return UART_ERROR_INVALID_PARAM;
    }

#else

    Local_psUart = UART_asHandles[enChannel];

#endif /*  DEBUG  */


    while(u32Len--)
    {
        LL_USART_TransmitData8(Local_psUart->uart_handle, *Local_pu8DataPtr++);

        while(LL_USART_IsActiveFlag_TXE(Local_psUart->uart_handle) == 0)
        {
        }
    }

    while(LL_USART_IsActiveFlag_TC(Local_psUart->uart_handle) == 0)
    {
    }

    return UART_ERROR_NONE;
}

static void UART_vidIrqCallback(const UART_t * const psUart)
{
    uint32_t Local_u32Status;
    uint8_t Local_u8Byte;
    RingBuffer_Error_t Local_enBufferError;

    /**
     * Handle UART error handling:
     * - Error flags (in USARTx->SR) are cleared by: 
     *   1- reading UARTx->SR register, followed by
     *   2- reading USARTx->DR register
     * */
    Local_u32Status = psUart->uart_handle->SR;

    /**
     * Handle UART RX
     * 
     * If UART->RXNE flag is set (when a byte is received on UART) and
     * If UART->RXNEI (RX not empty interrupt):
     *   - read byte from UART->DR 
     *   - If no parity error:
     *     - put byte into UART->rx_buffer
     *   - Else:
     *     - Ignore read byte with parity error
     * */
    if(LL_USART_IsEnabledIT_RXNE(psUart->uart_handle) && ((Local_u32Status & USART_SR_RXNE) == USART_SR_RXNE))
    {
        Local_u8Byte = LL_USART_ReceiveData8(psUart->uart_handle);
        if((Local_u32Status & USART_SR_PE) != USART_SR_PE)
        {
            RingBuffer_enPutItem(psUart->rx_buffer, &Local_u8Byte);
        }
    }

    /**
     * Handle UART TX
     * 
     * If UART->TXE flag is set (TXE flag is set when UART TX is enabled, and after a byte is transmitted from UART->DR) and
     * If UART->TXEI (TX empty interrupt) is enabled (enabled in UART_enWrite()):
     *   - If UART->tx_buffer has data bytes (not empty):
     *     - ready byte from UART->tx_buffer and send it
     * 
     *   - else (UART->tx_buffer is empty):
     *     - disable UART->TXEI (TX empty interrupt)
     * */
    if(LL_USART_IsEnabledIT_TXE(psUart->uart_handle) && ((Local_u32Status & USART_SR_TXE) == USART_SR_TXE))
    {
        Local_enBufferError = RingBuffer_enGetItem(psUart->tx_buffer, &Local_u8Byte);
        if(Local_enBufferError == RING_BUFFER_ERROR_NONE)
        {
            LL_USART_TransmitData8(psUart->uart_handle, Local_u8Byte);
        }
        else
        {
            LL_USART_DisableIT_TXE(psUart->uart_handle);
        }
    }
}
